# wasm_image_compressor

./: .d.ts  .gitignore  README.md  app.vue  build.sh  eslint.config.mjs  index.d.ts  index.js  main.ts  netlify.toml  nuxt.config.ts  package-lock.json  package.json  publish.sh  update.sh
app/: app.vue
app/components/: Converter.vue
app/components/inputs/: Select.vue
app/composables/: useImage.ts
components/: Converter.vue  Image.vue  InputNumber.vue  InputSelect.vue
components/inputs/: Button.vue  File.vue  Number.vue
composables/: useImage.ts
plugins/: wasm.client.ts
schema/: convert.d.ts
server/api/: image.ts
utils/: object.ts
wasm/: Cargo.toml
wasm/pkg/: README.md  package.json
wasm/pkg/lib/: index.d.ts  index.js  index_bg.wasm  index_bg.wasm.d.ts
wasm/src/: compression.rs  error.rs  lib.rs  media_type.rs
