[package]
name = "wasm_image_compressor"
version = "1.4.1"
edition = "2021"
description = "wasm_image_compressor"
authors = ["Daniele Falchetti <danielefalche@gmail.com>"]
license = "MIT"
repository = "https://github.com/falcosan/wasm_image_compressor"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
pixlzr = "0.3.1"
image = "0.25.5"
js-sys = "0.3.76"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }
serde_json = { version = "1.0.117", default-features = false }
web-sys = { version = "0.3", features = ["Url", "Blob", "BlobPropertyBag", "Request", "RequestInit", "RequestMode", "Response", "Window"] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
